# robots_HW

TASK_1/my_robot_pkg/msg/: SensorData.msg
TASK_1/my_robot_pkg/my_robot_pkg/: sensor_publisher.py  sensor_subscriber.py
TASK_2/my_robot_pkg/my_robot_pkg/: distance_client.py  distance_server.py
TASK_2/my_robot_pkg/srv/: ComputeDistance.srv
TASK_4/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
TASK_4/install/task_4/lib/task_4/: publisher
TASK_4/install/task_4/share/task_4/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
TASK_4/install/task_4/share/task_4/cmake/: ament_cmake_export_dependencies-extras.cmake  task_4Config.cmake
TASK_4/log/: latest_build
TASK_4/my_robot_pkg/include/: publisher.py
TASK_5/my_robot_pkg/include/: client.py  server.py
TASK_7/gazebo_controller_pkg/: CMakeLists.txt  path.txt
TASK_7/gazebo_controller_pkg/gazebo_controller_pkg/: obstacle_avoidance.py
TASK_7/gazebo_controller_pkg/install/: local_setup.sh  setup.sh
TASK_7/gazebo_controller_pkg/install/gazebo_controller_pkg/lib/gazebo_controller_pkg/: odom_listener.py  scan_analyzer.py  teleop_node.py  wall_follower.py
TASK_7/gazebo_controller_pkg/install/gazebo_controller_pkg/share/gazebo_controller_pkg/: local_setup.dsv  local_setup.sh  package.ps1  package.sh  package.xml
TASK_7/gazebo_controller_pkg/log/: latest_build
TASK_7/slam_custom/: CMakeLists.txt
TASK_7/slam_custom/install/: local_setup.sh  setup.sh
TASK_7/slam_custom/log/: latest_build
(+8 files in other folders)
